[gd_scene load_steps=13 format=3 uid="uid://cygh6jadgkhc5"]

[ext_resource type="Script" uid="uid://cvfv28cloa506" path="res://Gameplay/Mini Games/mini_game_whell.gd" id="1_5jqqg"]
[ext_resource type="Texture2D" uid="uid://gv5uo1rl6wlj" path="res://Gameplay/Mini Games/Assets/Wheel/MG_Wheel_BG.svg" id="1_a01ao"]
[ext_resource type="Script" uid="uid://dctliuovrjf7i" path="res://Gameplay/Mini Games/dragable.gd" id="2_5jqqg"]
[ext_resource type="Texture2D" uid="uid://div7ptbh66sot" path="res://Gameplay/Mini Games/Assets/Wheel/MG_Wheel_Fixed.svg" id="3_msxyu"]
[ext_resource type="Texture2D" uid="uid://cxun6oqvdcjp0" path="res://Gameplay/Mini Games/Assets/Wheel/MG_Wheel_Broken.svg" id="4_a6sys"]
[ext_resource type="Texture2D" uid="uid://cnpa6lk4nmmrx" path="res://Gameplay/Mini Games/Assets/Wheel/MG_Wheel_LynchPin.svg" id="5_nj2jl"]
[ext_resource type="Texture2D" uid="uid://debcktl5i7tah" path="res://Gameplay/Mini Games/Assets/Wheel/MG_Wheel_Axle.svg" id="6_0vdbl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_msxyu"]
radius = 45.3982

[sub_resource type="CircleShape2D" id="CircleShape2D_i4p6t"]
radius = 201.01

[sub_resource type="CircleShape2D" id="CircleShape2D_a6sys"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a01ao"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_5jqqg"]
radius = 43.7379

[node name="MiniGameWhell" type="Node2D"]
script = ExtResource("1_5jqqg")

[node name="BG" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_a01ao")

[node name="NewWheel" type="Area2D" parent="BG"]
unique_name_in_owner = true
position = Vector2(185, 52)
script = ExtResource("2_5jqqg")
metadata/_custom_type_script = "uid://dctliuovrjf7i"

[node name="Sprite2D" type="Sprite2D" parent="BG/NewWheel"]
position = Vector2(-160, -43)
texture = ExtResource("3_msxyu")

[node name="Center" type="Area2D" parent="BG/NewWheel/Sprite2D"]
unique_name_in_owner = true
position = Vector2(9, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/NewWheel/Sprite2D/Center"]
shape = SubResource("CircleShape2D_msxyu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/NewWheel"]
position = Vector2(-156, -42)
shape = SubResource("CircleShape2D_i4p6t")

[node name="OldWheel" type="Area2D" parent="BG"]
unique_name_in_owner = true
position = Vector2(42, 4)
rotation = -2.7838
script = ExtResource("2_5jqqg")
metadata/_custom_type_script = "uid://dctliuovrjf7i"

[node name="Sprite2D" type="Sprite2D" parent="BG/OldWheel"]
texture = ExtResource("4_a6sys")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BG/OldWheel"]
polygon = PackedVector2Array(189.007, 134.314, 129.281, -188.193, -193.104, -133.85, -128.58, 190.066)

[node name="Lynch" type="Area2D" parent="BG"]
unique_name_in_owner = true
position = Vector2(35, -3)
rotation = -2.7838
script = ExtResource("2_5jqqg")
metadata/_custom_type_script = "uid://dctliuovrjf7i"

[node name="Sprite2D" type="Sprite2D" parent="BG/Lynch"]
rotation = 3.49939
texture = ExtResource("5_nj2jl")

[node name="LynchCenter" type="Area2D" parent="BG/Lynch/Sprite2D"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Lynch/Sprite2D/LynchCenter"]
position = Vector2(0.433931, -46.7527)
shape = SubResource("CircleShape2D_a6sys")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BG/Lynch"]
position = Vector2(-1.87334, 0.700415)
rotation = 3.49939
polygon = PackedVector2Array(-28.7226, 96.5195, 31.7776, 92.9526, 34.0698, -91.8926, -42.9009, -85.9332)

[node name="Sprite2D" type="Sprite2D" parent="BG"]
modulate = Color(1, 1, 1, 0.388235)
position = Vector2(-381, 178)
texture = ExtResource("4_a6sys")

[node name="Trash" type="Area2D" parent="BG"]
position = Vector2(-499, 294)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Trash"]
shape = SubResource("CircleShape2D_a01ao")

[node name="Sprite2D2" type="Sprite2D" parent="BG"]
position = Vector2(33, 8.5)
texture = ExtResource("6_0vdbl")

[node name="Axle" type="Area2D" parent="BG"]
position = Vector2(33, 8.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BG/Axle"]
shape = SubResource("CircleShape2D_5jqqg")

[connection signal="area_entered" from="BG/Trash" to="." method="_on_trash_area_entered"]
[connection signal="area_entered" from="BG/Axle" to="." method="_on_axle_area_entered"]
[connection signal="area_exited" from="BG/Axle" to="." method="_on_area_2d_area_exited"]
[connection signal="body_exited" from="BG/Axle" to="." method="_on_area_2d_body_exited"]
